--- a/index.html
+++ b/index.html
@@ -6,50 +6,50 @@
     <title>Western Shelter Solutions</title>
 </head>
 <body>
-    <div>
+    <div class="header">
         <h3>Western Shelter Solutions</h3>
         <a href=""></a>
         <a href=""></a>
         <a href=""></a>
     </div>
-    <div>
+    <div class="mission-container">
         <div>
-            <h1>Providing for first responders</h1>
+            <h1>Our Mission:</h1>
             <p>Our goal is to provide to first responders so they have the tools they need.</p>
-            <button>See More</button>
+            <button class="see-more">See More</button>
         </div>
         <img src="" alt="">
     </div>
-    <div>
+    <div class="profession-container">
         <h2>Our profession:</h2>
-        <div>
+        <div class="profession-images">
             <img src="" alt="">
             <img src="" alt="">
             <img src="" alt="">
             <img src="" alt="">
         </div>
-        <div>
+        <div class="profession-text">
             <p></p>
             <p></p>
             <p></p>
             <p></p>
         </div>
     </div>
-    <div>
-        <p></p>
-        <p></p>
+    <div class="quote-container">
+        <p class="quote"></p>
+        <p class="author"></p>
     </div>
-    <div>
+    <div class="hiring-container">
         <div>
-            <h3>We Are Hiring!</h3>
-            <p>You can secure a position in our company by clicking here!</p>
+            <h3 class="hiring">We Are Hiring!</h3>
+            <p class="hiring-description">You can secure a position in our company by clicking here!</p>
         </div>
         <div>
-            <button>Sign up</button>
+            <button class="sign-up">Sign up</button>
         </div>
     </div>
-    <div>
-        <p>Copyright nobody 2025</p>
+    <div class="footer">
+        <p class="footer-text">Copyright nobody 2025</p>
     </div>
 </body>
 </html>
