Add more divs, classes, and basic CSS
Added more divs and classes to assist styling in CSS.

Edited a few elements for better wording.

Added basic CSS which includes coloring backgrounds and text, and
adding text sizes, weights, and styles.

Imported Roboto font.

--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Western Shelter Solutions</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <h3>Western Shelter Solutions</h3>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-    </div>
-    <div class="mission-container">
-        <div>
-            <h1>Our Mission:</h1>
-            <p>Our goal is to provide to first responders so they have the tools they need.</p>
-            <button class="see-more">See More</button>
+    <div class="header-container">
+        <div class="header">
+            <h3 class="header-logo">Western Shelter Solutions</h3>
+            <ul>   
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+            </ul>
         </div>
-        <img src="" alt="">
+        <div class="mission-container">
+            <div>
+                <h1 class="hero-main">Our Mission:</h1>
+                <p class="hero-desc">Our goal is to provide for first responders so they have the tools they need.</p>
+                <button class="see-more">See More</button>
+            </div>
+            <img src="" alt="">
+        </div>
     </div>
     <div class="profession-container">
-        <h2>Our profession:</h2>
+        <h2 class="profession-header">Our profession:</h2>
         <div class="profession-images">
             <img src="" alt="">
             <img src="" alt="">
@@ -36,15 +41,13 @@
         </div>
     </div>
     <div class="quote-container">
-        <p class="quote"></p>
+        <p class="quote">ewfasefasefesf</p>
         <p class="author"></p>
     </div>
     <div class="hiring-container">
-        <div>
+        <div class="call-to-action">
             <h3 class="hiring">We Are Hiring!</h3>
-            <p class="hiring-description">You can secure a position in our company by clicking here!</p>
-        </div>
-        <div>
+            <p class="hiring-desc">You can secure a position in our company by clicking here!</p>
             <button class="sign-up">Sign up</button>
         </div>
     </div>
