Complete header section and add images
Completed styling the header section utilizing flexbox and other
properties such as padding, border-radius, margin, etc.

HTML edited to add working links and add mission statement.

Added images directory to store images and added "building-tent.jpg"
to images.

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         <div class="header">
             <h3 class="header-logo">Western Shelter Solutions</h3>
             <ul>   
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/">Instagram</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/">Facebook</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/">Twitter</a>
             </ul>
         </div>
         <div class="mission-container">
             <div>
                 <h1 class="hero-main">Our Mission:</h1>
-                <p class="hero-desc">Our goal is to provide for first responders so they have the tools they need.</p>
-                <button class="see-more">See More</button>
+                <p class="hero-desc">Our goal is to ensure first responders have the tools and support they need to do their jobs safely and effectively. These individuals put their lives on the line every day to protect our communities, often working under intense pressure and in unpredictable situations. We are committed to providing them with reliable equipment and essential resources they can depend on in critical moments. Whether they are responding to fires, medical emergencies, natural disasters, or public safety threats, we work to ensure they are never without the gear they need. By helping first responders stay equipped and confident in the field, we not only support their safety and success but also strengthen the well-being and resilience of the people and communities they protect.</p>
+                <a target="_blank" rel="noopener noreferrer" href=""><button class="see-more">See More</button></a>
             </div>
-            <img src="" alt="">
+            <img class="building-tent" src="images/building-tent.jpg" alt="Man building a tent">
         </div>
     </div>
     <div class="profession-container">
