Complete profession section and add images
Completed styling the profession section, and editing HTML to include
links and to add titles. Was styled primarily with flexbox and
properties such as border, border-radius, text-align, margin, and
padding

Links are to videos on the Western Shelter YouTube channel, tiles are
also from those videos.

Also added quote from Western Shelter.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div class="mission-container">
             <div>
-                <h1 class="hero-main">Our Mission:</h1>
+                <h1 class="hero-main">Our mission:</h1>
                 <p class="hero-desc">Our goal is to ensure first responders have the tools and support they need to do their jobs safely and effectively. These individuals put their lives on the line every day to protect our communities, often working under intense pressure and in unpredictable situations. We are committed to providing them with reliable equipment and essential resources they can depend on in critical moments. Whether they are responding to fires, medical emergencies, natural disasters, or public safety threats, we work to ensure they are never without the gear they need. By helping first responders stay equipped and confident in the field, we not only support their safety and success but also strengthen the well-being and resilience of the people and communities they protect.</p>
-                <a target="_blank" rel="noopener noreferrer" href=""><button class="see-more">See More</button></a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.westernshelter.com/"><button class="see-more">See More</button></a>
             </div>
             <img class="building-tent" src="images/building-tent.jpg" alt="Man building a tent">
         </div>
@@ -28,21 +28,21 @@
     <div class="profession-container">
         <h2 class="profession-header">Our profession:</h2>
         <div class="profession-images">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=lsOaB4qBx5Q"><img class="pimage" style="height: 150px; width: 150px;" src="images/intro.jpg" alt="YouTube Thumbnail"></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=tdr1Yj8EbPo"><img class="pimage" style="height: 150px; width: 150px;" src="images/loop.jpg" alt="YouTube Thumbnail"></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=XwCqHisyVUk"><img class="pimage" style="height: 150px; width: 150px;" src="images/container.jpg" alt="YouTube Thumbnail"></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=3qqgaX5bNlY"><img class="pimage" style="height: 150px; width: 150px;" src="images/east-africa.jpg" alt="YouTube Thumbnail"></a>
         </div>
         <div class="profession-text">
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
+            <p>Western Shelter <br>Introduction</p>
+            <p>WSS - Video <br>2022</p>
+            <p>Container <br>Projects</p>
+            <p>Level II Field Hospital<br> Mass Casualty<br> Training Exercise</p>
         </div>
     </div>
     <div class="quote-container">
-        <p class="quote">ewfasefasefesf</p>
-        <p class="author"></p>
+        <p class="quote">When time is critical and lives are on the line, you need deployable shelter solutions that are built to last.</p>
+        <p class="author">-Western Shelter</p>
     </div>
     <div class="hiring-container">
         <div class="call-to-action">
