Complete hiring section, fix quote and footer
Completed hiring section primarily using flexbox but also using many
different CSS properties such as background-color, color, border,
border-radius, border width, and font-weight.

Fixed quote padding to make ui look better.

added missing background color to footer.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
     </div>
     <div class="hiring-container">
         <div class="call-to-action">
-            <h3 class="hiring">We Are Hiring!</h3>
-            <p class="hiring-desc">You can secure a position in our company by clicking here!</p>
-            <button class="sign-up">Sign up</button>
+            <div class="hiring-box">
+                <h3 class="hiring">We Are Hiring!</h3>
+                <p class="hiring-desc">You can secure a position in our company by clicking here!</p>
+            </div>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.westernshelter.com/"><button class="sign-up">Sign up</button></a>
         </div>
     </div>
     <div class="footer">
