--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="footer">
-        <p class="footer-text">Copyright nobody 2025</p>
+        <p class="footer-text">Copyright © nobody 2025</p>
     </div>
 </body>
 </html>
