Fix uncentered profession text
Fixed uncentered text in the profession section using new divs in HTML
and flexbox.

--- a/index.html
+++ b/index.html
@@ -28,16 +28,22 @@
     <div class="profession-container">
         <h2 class="profession-header">Our profession:</h2>
         <div class="profession-images">
-            <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=lsOaB4qBx5Q"><img class="pimage" style="height: 150px; width: 150px;" src="images/intro.jpg" alt="YouTube Thumbnail"></a>
-            <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=tdr1Yj8EbPo"><img class="pimage" style="height: 150px; width: 150px;" src="images/loop.jpg" alt="YouTube Thumbnail"></a>
-            <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=XwCqHisyVUk"><img class="pimage" style="height: 150px; width: 150px;" src="images/container.jpg" alt="YouTube Thumbnail"></a>
-            <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=3qqgaX5bNlY"><img class="pimage" style="height: 150px; width: 150px;" src="images/east-africa.jpg" alt="YouTube Thumbnail"></a>
-        </div>
-        <div class="profession-text">
-            <p>Western Shelter <br>Introduction</p>
-            <p>WSS - Video <br>2022</p>
-            <p>Container <br>Projects</p>
-            <p>Level II Field Hospital<br> Mass Casualty<br> Training Exercise</p>
+            <div class="pelement">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=lsOaB4qBx5Q"><img class="pimage" style="height: 150px; width: 150px;" src="images/intro.jpg" alt="YouTube Thumbnail"></a>
+                <p>Western Shelter <br>Introduction</p>
+            </div>
+            <div class="pelement">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=tdr1Yj8EbPo"><img class="pimage" style="height: 150px; width: 150px;" src="images/loop.jpg" alt="YouTube Thumbnail"></a>
+                <p>WSS - Video <br>2022</p>
+            </div>
+            <div class="pelement">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=XwCqHisyVUk"><img class="pimage" style="height: 150px; width: 150px;" src="images/container.jpg" alt="YouTube Thumbnail"></a>
+                <p>Container <br>Projects</p>
+            </div>
+            <div class="pelement">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=3qqgaX5bNlY"><img class="pimage" style="height: 150px; width: 150px;" src="images/east-africa.jpg" alt="YouTube Thumbnail"></a>
+                <p>Level II Field Hospital<br> Mass Casualty<br> Training Exercise</p>
+            </div>
         </div>
     </div>
     <div class="quote-container">
